# sysinfo-exporter

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: release.yml
config/prometheus/: web-config.yml
scripts/: build-debian-package.sh
src/: collector.rs  config.rs  main.rs  metrics.rs
