[package]
name = "sysinfo-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
dotenv = "0.15.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
prometheus = "0.13.4"
prometheus-reqwest-remote-write = "0.2.1"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
sysinfo = "0.33.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target."cfg(unix)".dependencies]
openssl = { version = "*", features = ["vendored"] }
